added updated files

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     json.sort(function(a, b){
       return(a.index - b.index);
     })
-      console.log("printing splice");
-      console.log(json);
+      // console.log("printing splice");
+      // console.log(json);
       
 
       // json = json_;
