updated index file

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       });
 
       json_ = [];
-      console.log(json);
+      // console.log(json);
     //   for(let i = 0; i < json.length; i += 1){
     //     for(let j = 0; j < json.length; j += 1){
     //       if(j == json[i].index){
